2005-01-24  Atsushi Enomoto  <atsushi@ximian.com>

	* System.Data_test.dll.sources : added DataRowViewTest.cs.

2004-11-25  Raja R Harinath  <rharinath@novell.com>

	* Makefile (BUILT_SOURCES): New.  Build Mono.Data.SqlExpressions/Parser.cs.
	(EXTRA_DISTFILES): Add Mono.Data.SqlExpressions/Parser.jay.
	* System.Data.dll.sources: Don't mention Mono.Data.SqlExpressions/Parser.cs.

2004-11-10  Martin Baulig  <martin@ximian.com>

	* System.Data.Sql/ISqlCommand.cs,
	System.Data.Sql/ISqlConnection.cs,
	System.Data.Sql/ISqlExecutionContext.cs,
	System.Data.Sql/ISqlParameterCollection.cs,
	System.Data.Sql/ISqlTransaction.cs: Added `new' modifiers where needed.

2004-10-06  Umadevi S <sumadevi@novell.com>
	* System.Data.dll.sources : Added ISqlNotificationReceiver, SqlNotifcationType,
		SqlNotificationInfo, SqlNotificationSource

2004-09-15  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Data_test.dll.sources: Added OdbcPermission, OleDbPermission 
	and SqlClientPermission unit tests to the build.

2004-09-14  Sebastien Pouliot  <sebastien@ximian.com>

	* System.Data_test.dll.sources: Added DBDataPermission unit tests to
	the build.

2004-09-14 Umadevi S <sumadevi@novell.com>
	* Added System.Data.SqlTypes/SqlNotFilledException.cs,System.Data.SqlTypes/
	SqlAlreadyFilledException.cs to System.Data.dll.sources

2004-09-13  Sebastien Pouliot  <sebastien@ximian.com>

	* Makefile: Added /nowarn:618 when compiling unit test assembly to 
	remove nunit obsolete warnings.
	* System.Data.dll.sources: Added System.Data.Common.DbConnectionOptions
	(NET_2_0) and System.Data.Common/PermissionHelper to the build.
	* System.Data_test.dll.sources: Added {DBData|Odbc|OleDb|SqlClient}
	PermissionAttribute unit tests to the build.

2004-08-25  Nick Drochak  <ndrochak@ieee.com>

	* Makefile: Cut down the the build noise.

2004-08-19 Gert Driesen <drieseng@users.sourceforge.net>
	* Added System.Data.SqlClient/SqlConnectionTest.cs to 
	System.Data_test.dll.sources
