@@ -1,5 +1,9 @@
 2005-02-02  Atsushi Enomoto  <atsushi@ximian.com>
 
+	* DataViewManagerTest.cs : new file.
+
+2005-02-02  Atsushi Enomoto  <atsushi@ximian.com>
+
 	* DataViewTest.cs : Enable ComplexEventSequence1().
 	  - Right now don't test ApplyDefaultSort event.
 	  - Also row order between identical values depends on implementation.
